2001-03-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/borders.c (RedrawBorder):
	rewrote and fixed handle drawing

2001-03-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* sample.fvwmrc/system.fvwm2rc:
	fixed *FvwmIconMan*sort and ...*dontshow resources

	* sample.fvwmrc/decor_examples:
	* sample.fvwmrc/system.fvwm2rc-sample-1:
	* sample.fvwmrc/system.fvwm2rc:
	fixed MenuStyle commands

	* libs/Graphics.c (AllocLinearGradient):
	fixed rounding errors
	(AllocLinearGradient):
	removed debug code

	* fvwm/move_resize.c (CMD_Resize):
	fixed resizing shaded windows

2001-03-27  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/session.c (get_version_string):
	window_flags changed, so state file version should be increased

2001-03-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (setup_style_and_decor):
	* fvwm/builtins.c (CMD_ChangeDecor):
	* fvwm/window_flags.h:
	* fvwm/fvwm.h (struct):
	fixed (?) ChangeDecor/UseDecor/Style problem

2001-03-26  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/add_window.c (setup_style_and_decor): Make useDecor work again.

2001-03-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c (ReturnFocusWindow):
	new function

	* fvwm/misc.c (UngrabEm):
	fixed pointer grabbing/focus after a menu closes

	* fvwm/move_resize.c (CMD_Resize):
	fixed resizing shaded windows w/ titleatbottom

2001-03-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* INSTALL.fvwm (Note):
	* vms/config.h:
	* fvwm/cursor.h:
	* acconfig.h:
	* configure.in:
	* fvwm/builtins.c (CMD_BugOpts):
	* fvwm/fvwm.c (InitVariables):
	removed --enable-move-bug-workaround configure option
	removed --disable-modality configure option
	removed remnants of BUSYCURSOR configure option

2001-03-24  Mikhael Goikhman  <migo@homemail.com>

	* NEWS:
	* sample.fvwmrc/system.fvwm2rc-sample-2:
	small rewording/spelling

2001-03-24  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/modconf.c (CMD_Send_ConfigInfo):
	* fvwm/module_interface.c (CMD_SendToModule):
	* fvwm/builtins.c (CMD_Beep):