@@ -1,5 +1,8 @@
 2001-03-29  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* fvwm/move_resize.c (DoSnapAttract):
+	fixed windows snapping off screen
+
 	* fvwm/borders.c (RedrawBorder):
 	rewrote and fixed handle drawing
 
